added entity s implementation to main and openapi.yml
